[feat&fix] newbieBox 스타일 추가 && align-itmes: start 관련 에러로 flex-start로 수정 #323

--- a/styles/records/RecordList.module.scss
+++ b/styles/records/RecordList.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .noRecord {
